--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			<overlay-head v-if="!(tmp.gameEnded && !player.keepGoing)"></overlay-head>
 			<div class="sideLayers">
 				<div v-for="(node, index) in OTHER_LAYERS['side']">
-					<tree-node :layer='node' :abb='tmp[node].symbol' :size="'small'" :key="'side' + index"></tree-node>
+					<side-menu :layer='node' :abb='tmp[node].disp_symbol' :size="'small'" :key="'side' + index"></side-menu>
 				</div>
 			</div>
 		</div>
